@@ -8,7 +8,8 @@
 2013-10-11  Cedric Bail
 
 	* Eina: add Eina_Spinlock API,
-	use Eina_Spinlock in Eina_Log, replace Eina_Lock by Eina_Spinlock in Eina_Stringshare.
+	use Eina_Spinlock in Eina_Log, replace Eina_Lock by Eina_Spinlock in Eina_Stringshare,
+	Eina_Chained_Mempool.
 	* Eet: replace Eina_Lock by Eina_Spinlock in Eet_Dictionnary.
 	* Evas: replace Eina_Lock by Eina_Spinlock in Evas_ScaleCache, Evas_Async_Events and Image_Entry.
 	* Ecore: use Eina_Spinlock for Ecore_Thread.
